--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ helpinghands.com</title>
     <link rel="stylesheet" href="ed.css">
     <link rel="stylesheet" href="be.css">
     <link rel="stylesheet" href="electrical.css">
+    <link rel="stylesheet" href="phy.css">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Orbitron|Sacramento&display=swap" rel="stylesheet">
     
 </head>
@@ -58,9 +59,9 @@ Following topics!!!!!
                 <div> <a href="c%20lang.html"> <img src="c%20l.png" class="bording"></a></div>
             <a href="c%20lang.html"> go here</a></td>
                 
-                <td>   Chemistry.
-             <div> <a href="#"> <img src="chemistry.png" class="bording"></a></div>
-            <a href="#"> go here</a></td>
+                <td>   Appiled physics.
+             <div> <a href="phys.html"> <img src="phyn.jfif" class="bording"></a></div>
+            <a href="phys.html"> go here</a></td>
          <td>          
      BASIC ELECTRONICS.
              <div> <a href="basic%20elec.html"> <img src="basic%20electrnics.png"class="bording"></a></div>
